test/compile-fail/call-mutable-param-immutable.stderr
[0;37mtest/compile-fail/call-mutable-param-immutable.as:6.8-9: [0;31merror: [1;37mcannot capture mutable address of the immutable variable 'x'[0m
